Multiple Monitor Fix

--- a/dot_config/hypr/conf.d/layouts.conf
+++ b/dot_config/hypr/conf.d/layouts.conf
@@ -1,16 +1,10 @@
-# Layout configurations
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ and Master-Layout
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+dwindle {
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # You probably want this
+}
 
-# dwindle {
-#     pseudotile = true
-#     preserve_split = true
-#     no_gaps_when_only = true  # No gaps when only one window is visible
-#     smart_split = true
-#     smart_resizing = true
-# }
-
-# master {
-#     new_status = master
-#     new_on_top = true
-#     no_gaps_when_only = true
-# }
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+master {
+    new_status = master
+}
