--- a/dot_config/hypr/conf.d/windowrules.conf
+++ b/dot_config/hypr/conf.d/windowrules.conf
@@ -15,8 +15,12 @@ windowrule = size 800 600, class:^(pavucontrol)$
 windowrulev2 = idleinhibit focus, class:^(mpv)$
 windowrulev2 = idleinhibit fullscreen, class:^(firefox)$
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 xwayland{
     force_zero_scaling = true
 }
+
+# Ignore maximize requests from apps. You'll probably like this.
+windowrule = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
